--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <main>
+      <h1>Appointment Scheduler</h1>
       <!-- datepicker from html 
     Source: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/datetime-local -->
       <form>
         <div>
           <label for="event"
-            >Choose your slot (required, June 1st 8.30am to June 30th
-            4.30pm):</label
-          >
+            >Choose your slot (required, June 1st 8.30am to June 30th 4.30pm):
+          </label>
           <input
             id="event"
             type="datetime-local"
@@ -31,8 +31,6 @@
           <input type="submit" value="Book event!" />
         </div>
       </form>
-
-      <button class="Confirm">Confirm</button>
       <button hidden="hidden" class="Cancel">Cancel</button>
     </main>
     <script src="script/index.js"></script>
