--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Appointment scheduler</title>
+    <title>Appointment Scheduler</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,8 +10,7 @@
   <body>
     <main>
       <h1>Appointment Scheduler</h1>
-      <!-- datepicker from html
-    Source: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/datetime-local -->
+      <!-- datepicker from html. Source: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/datetime-local -->
       <form action="/appointment" method="POST">
         <div>
           <label for="slot">Choose your slot: </label>
